!HOTFIX: AllowMethods 명시적으로 작성